<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.0.6</version>
		<relativePath/>
	</parent>

	<groupId>com.qingyun</groupId>
	<artifactId>JavaKQA</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>JavaKQA</name>
	<description>JavaKQA multi-module parent</description>

	<modules>
		<module>framework</module>
		<module>system-config</module>
	</modules>

	<properties>
		<java.version>17</java.version>
		<spring-boot.run.skip>true</spring-boot.run.skip>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.qingyun</groupId>
				<artifactId>framework</artifactId>
				<version>${project.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>
